# evm-tui

./: AGENTS.md  Cargo.toml  LICENSE  README.md
specs/: README.md  app_state.md  bottom_bar.md  data_and_integrations.md  input_and_navigation.md  loading_refresh.md  main_view.md  sidebar.md  top_section.md
src/: main.rs
src/app/: anvil.rs  etherscan.rs  mod.rs
src/components/: mod.rs
src/storage/: mod.rs  repositories.rs
src/ui/: bottom_bar.rs  main_view.rs  mod.rs  sidebar.rs  top.rs  util.rs
src/ui/modal/: mod.rs  secrets.rs
