[package]
name = "evm-tui"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Carlos Juarez <carlosgj94@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
fjall = "2.11.2"
anyhow = "1.0.100"
alloy = { version = "1.0.41", features = ["full"] }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
